<resources>
    <string name="app_name">Cheker2</string>
    <string name="enterA">Вход</string>
    <string name="exitA">Выход</string>
    <string name="text">Меня зовут:</string>
    <string name="text2">Приложите телефон к метке</string>
    <string name="fio">Иванов И. И.</string>
    <string name="enter">Вход</string>
    <string name="exit">Выход</string>
    <string name="textview">Добрый день</string>
    <string name="textview2">Всего доброго</string>
    <string name="fio_enter" />
    <string name="fio_exit" />
</resources>
